--- a/views/index.erb
+++ b/views/index.erb
@@ -8,9 +8,7 @@
   </div>
 
   <div class="yarp">
-    <iframe width="640" height="360" src="https://www.youtube.com/embed/_vdD3tZ8e54" frameborder="0" allowfullscreen></iframe>  </div>
-  </div>
-
+    <iframe width="640" height="360" src="https://www.youtube.com/embed/kYdHicsiYWo" frameborder="0" allowfullscreen></iframe>
   <div class="instructions">
     <p>Yarp can be very sleepy, so if you need to see a dog jump around, use the arrow keys!</p>
   </div>
